tests/compError/wrongArgType.iota
// compError
// error: expected type struct builtin:Number{}, but got type struct builtin:String{}
// line:12 -> for function call here
// line:12 -> (this argument)
// line:11 -> function from here
// error: expected type struct builtin:Number{}, but got type struct builtin:Bool{}
// line:13 -> for function call here
// line:13 -> (this argument)
// line:11 -> function from here

add1 = @x(builtin_Float64) x + 1
add1 "text"
add1 true